fixed width of logo on mobile

--- a/ldsn-apps/bestof/democratandchronicle/second-street.css
+++ b/ldsn-apps/bestof/democratandchronicle/second-street.css
@@ -63,7 +63,7 @@ and (max-width: 775px) {
     }
     
     .header img {
-    width:290px;
+    width:220px;
     margin-bottom:20px;
     }
 
